--- a/Web-dscript/index.html
+++ b/Web-dscript/index.html
@@ -32,6 +32,9 @@
   <button onclick="updateOrSave()">
     saveCanvas
   </button>
+  <button onclick="toggleKaledoscope()">
+    caleidoscopio
+  </button>
   <a href="index.html?data1|data2|data3">clique  Aqui</a>
 </body>
 
