misturando as imagens na tela para inspirar o usuario

--- a/Web-dscript/index.html
+++ b/Web-dscript/index.html
@@ -35,6 +35,9 @@
   <button onclick="toggleKaledoscope()">
     caleidoscopio
   </button>
+  <button onclick="misturar()">
+    misturar
+  </button>
   <a href="index.html?data1|data2|data3">clique  Aqui</a>
 </body>
 
