Adicionando exemplos para mostrar ao usuario, e ajustando tela para gerar os DSCRIPT

--- a/Web-dscript/segunda_tela.html
+++ b/Web-dscript/segunda_tela.html
@@ -49,11 +49,14 @@
             <main id="proxima">
             </main>
             <div class="botoes-div">
-                <button onclick="proximaPalavra()">
+                <button onclick="updateOrSave()">
                     Proxima
                 </button>
                 <button onclick="misturar()">
-                    Gerar Automaticamente
+                    Misturar
+                </button>
+                <button onclick="example()">
+                    Inspirar
                 </button>
             </div>
         </div>
